code/python/FactSetConcordance/v2/docs/EntityMatch.md
# EntityMatch

Entity Match object showing the decision reached for each Entity. 

## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**task_id** | **int, none_type** | Identifier denoting a specific Concordance task submitted by the user. This value will be null for /entity-match endpoint responses and is only available when using the \&quot;Bulk\&quot; workflow.  | [optional] 
**universe_id** | **int, none_type** | The id of the universe that entities should be mapped to | [optional] 
**client_id** | **str, none_type** | Unique Identifer provided by the user in the request to represent the entity Name being requested. | [optional] 
**client_bbg_figi** | **str, none_type** | Name of the column as provided by the user -  Bloomberg Listing/Regional/Security ID. | [optional] 
**client_bbg_ticker** | **str, none_type** | Name of the column as provided by the user -  Bloomberg Listing and Regional Ticker. | [optional] 
**client_bic** | **str, none_type** | Name of the column as provided by the user - BICCode, bank indentification code | [optional] 
**client_cik** | **str, none_type** | Name of the column as provided by the user -  CIK, Edgar Central Index Keys | [optional] 
**client_country** | **str, none_type** | ISO2 country code specified in the request. | [optional] 
**client_crd** | **str, none_type** | Name of the column as provided by the user -  CRD, Central Registration Depository | [optional] 
**client_creditsafe** | **str, none_type** | Creditsafe Identifier | [optional] 
**client_crunchbase** | **str, none_type** | Crunchbase Identifier | [optional] 
**client_cusip** | **str, none_type** | Name of the column as provided by the user -  CUSIP. | [optional] 
**client_ein** | **str, none_type** | Name of the column as provided by the user -  EmployerIdentificationNumber, EIN. | [optional] 
**client_factset_id** | **str, none_type** | Name of the column as provided by the user -  FactSet Identifier, FactSet -E,-S,-R, -L Permanent Identifier. | [optional] 
**client_fitch** | **str, none_type** | Name of the column as provided by the user -  FitchCreditRating, Fitch Ratings Identifier. | [optional] 
**client_gvkey** | **str, none_type** | Name of the column as provided by the user -  GVKEY, Compustat Global Company Key. | [optional] 
**client_gvkey_iid** | **str, none_type** | Name of the column as provided by the user -  GVKEY+IID, Compustat Global Company Key and Issue Identifier. | [optional] 
**client_isin** | **str, none_type** | Name of the column as provided by the user -  ISIN. | [optional] 
**client_jcn** | **str, none_type** | Name of the column as provided by the user -  JCN , Japanese Corporate Number. | [optional] 
**client_lei** | **str, none_type** | Name of the column as provided by the user -  LegalEntityIdentifier, LEI. | [optional] 
**client_lxid** | **str, none_type** | Name of the column as provided by the user -  LXID, Markit Syndicated Loan Identifier. | [optional] 
**client_md** | **str, none_type** | Name of the column as provided by the user -  MoodysIssuer, Moody&#39;s Ratings Identifier. | [optional] 
**client_name** | **str, none_type** | Name of the entity to match as specified in the request | [optional] 
**client_priority** | **str, none_type** | Name of the priority column as provided by the user. | [optional] 
**client_red_code** | **str, none_type** | Name of the column as provided by the user -  RedCode, Markit Reference Entity Identifier. | [optional] 
**client_rssd** | **str, none_type** | Name of the column as provided by the user -  FederalReserveRSSDIdentifier, RSSD. | [optional] 
**client_sedol** | **str, none_type** | Name of the column as provided by the user -  SEDOL. | [optional] 
**client_spr** | **str, none_type** | Name of the column as provided by the user -  S&amp;PRating, S&amp;P Ratings Identifier. | [optional] 
**client_state** | **str, none_type** | State code specified in the request. | [optional] 
**client_ticker** | **str, none_type** | Name of the column as provided by the user -  PriceTicker. | [optional] 
**client_ticker_exchange** | **str, none_type** | Name of the column as provided by the user -  TickerExch. | [optional] 
**client_ticker_region** | **str, none_type** | Name of the column as provided by the user -  TickerRegion | [optional] 
**client_ukch** | **str, none_type** | Name of the column as provided by the user -  UKCompanyHouse | [optional] 
**client_url** | **str, none_type** | URL specified in the request. | [optional] 
**client_valoren** | **str, none_type** | Name of the column as provided by the user -  VALOR, Valoren (\&quot;Valor\&quot;) Identification. | [optional] 
**client_wkn** | **str, none_type** | Name of the column as provided by the user -  WKN, German Securities Identification. | [optional] 
**client_additional_context** | **{str: (str,)}** | Any additional context column along with their values in the input file or single search.  To be used by Managed Service for any unmapped records.  | [optional] 
**symbol_match_type** | **str, none_type** | Source type of the Symbol that matched | [optional] 
**row_index** | **int, none_type** | Row number for match in the request or input file. | [optional] 
**match_flag** | **bool, none_type** | Flag denoting if the row is a match. | [optional] 
**entity_id** | **str, none_type** | FactSet Entity Identifier of the entity matched respective to the requested Name submitted. For more detail, visit [FactSet Permanent Security Identifier](https://oa.apps.factset.com/cms/oaAttachment/64c3213a-f415-4c27-a336-92c73a72deed/24881)  | [optional] 
**entity_name** | **str, none_type** | Full name corresponding to the matched entity. | [optional] 
**url** | **str, none_type** | URL of the matched entity. | [optional] 
**map_status** | **str, none_type** | Concordance status of the submitted, where -    * MAPPED - The requested Entity Name is successfully mapped to a FactSet Entity Id (-E)   * UNMAPPED - The requested Entity Name is unmapped by FactSet.   * INDETERMINATE - The requested Entity Name has unable to make a mapping.  | [optional] 
**similarity_score** | **float, none_type** | Probability of the match being similar to the entity requested as determined by the Concordance algorithm. A similarityScore of 1 is the highest level of similarity.  | [optional] 
**confidence_score** | **float, none_type** | Additional statistic calculated by the algorithm that is used to ensure the validity of the match result. A confidenceScore of 1 is the highest level of confidence.  | [optional] 
**country_code** | **str, none_type** | ISO2 country code corresponding to the location of the matched entity. | [optional] 
**country_name** | **str, none_type** | Country name corresponding to the location of the matched entity | [optional] 
**state_code** | **str, none_type** | Two character state code corresponding to the location of the matched entity. | [optional] 
**state_name** | **str, none_type** | State name corresponding to the location of the matched entity. | [optional] 
**sic_code** | **str, none_type** | Standard Industrial Classification (SIC) Code of the matched entity. | [optional] 
**entity_type_code** | **str, none_type** | Code representing the entity type of the matched entity. See the related request parameter for a table of all Codes and their respective descriptions. | [optional] 
**entity_type_description** | **str, none_type** | Description of of the matched entity&#39;s type. | [optional] 
**entity_sub_type_code** | **str, none_type** | Code representing the entity subtype of the matched entity. See the related request parameter for a table of all Codes and their respective descriptions. | [optional] 
**location_city** | **str, none_type** | City where the matched entity is located. | [optional] 
**region_name** | **str, none_type** | Region where the matched entity is located. | [optional] 
**factset_industry_code** | **str, none_type** | FactSet Industry Classification Code of the matched entity. | [optional] 
**factset_industry_name** | **str, none_type** | Name of the matched entity&#39;s FactSet Industry Classification. | [optional] 
**factset_sector_code** | **str, none_type** | Name of the matched entity&#39;s FactSet Sector Classification Code. | [optional] 
**factset_sector_name** | **str, none_type** | Name of the matched entity&#39;s FactSet Sector Classification. | [optional] 
**parent_name** | **str, none_type** | Name of the matched entity&#39;s parent entity. | [optional] 
**parent_match_flag** | **bool, none_type** | Flag denoting that the matched entity is the parent of another match. | [optional] 
**name_match_string** | **str, none_type** | String on which the Concordance algorithm mapped the submitted entity. | [optional] 
**name_match_source** | **str, none_type** | Type of name that the nameMatchString matched. | [optional] 
**client_exclude_entity_type** | **[str], none_type** | Entity types to exclude from the search. If provided, entities with the specified entity types will not be considered.  | [optional] 
**client_exclude_entity_sub_type** | **[str], none_type** | Entity sub-types to exclude from the search. If provided, entities with the specified entity sub-types will not be considered.  | [optional] 
**client_include_entity_type** | **[str], none_type** | Entity types to include in the search. If provided, only entities with the specified entity types will be considered.  | [optional] 
**client_include_entity_sub_type** | **[str], none_type** | Entity sub-types to include in the search. If provided, only entities with the specified entity sub-types will be considered.  | [optional] 
**any string name** | **bool, date, datetime, dict, float, int, list, str, none_type** | any string name can be used but the value must be the correct type | [optional]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


